--- a/Aritiafel/index.html
+++ b/Aritiafel/index.html
@@ -2,7 +2,13 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Test</title>
+    <script type="module">        
+        import { Aritiafel, Div } from "./js/Ansrabrar.js";
+        var a = new Aritiafel.Ansrabrar.Div();
+        var b = new Div();
+        //console.log(a);
+    </script>
 </head>
 <body>
 
