--- a/Aritiafel/index.html
+++ b/Aritiafel/index.html
@@ -4,18 +4,24 @@
     <meta charset="utf-8" />
     <title>Test</title>
     <script type="module">        
-        import { Aritiafel, Div, Style, Rule } from "./js/Ansrabrar.js";
-
-        //Style.initializeStyleSheet(document);
+        import { Aritiafel, Doc, Div, Style, Rule } from "./js/Ansrabrar.js";        
+        let doc = new Doc();
         let d = new Div();
-        let style1 = new Style(`testS`);
+        
+        let style1 = doc.createStyle(`testS`);
         style1.addRule(`background-color`, `red`);
         style1.addRule(`width`, `500px`);
-        style1.addRule(`height`, `300px`);
+        style1.addRule(`height`, `300px`);        
         d.Styles.push(style1);
-        var sb = document.getElementById(`Sandbox`);
+        doc.Content = d;
+        
 
-        sb.appendChild(d.getObject(document));
+        document.addEventListener("DOMContentLoaded", function (event) {
+            doc.printTo(document);
+        });
+        //var sb = document.getElementById(`Sandbox`);
+
+        //sb.appendChild(d.getObject(document));
     </script>
 </head>
 <body>
