--- a/Aritiafel/index.html
+++ b/Aritiafel/index.html
@@ -4,27 +4,26 @@
     <meta charset="utf-8" />
     <title>Test</title>
     <script type="module">        
-        import { Aritiafel, Doc, Div, Style, Rule } from "./js/Ansrabrar.js";        
-        let doc = new Doc();
-        let d = new Div();
-        
+        import { Doc, Div } from "./js/Ansrabrar.js";        
+        let doc = new Doc();        
+
         let style1 = doc.createStyle(`testS`);
         style1.addRule(`background-color`, `red`);
         style1.addRule(`width`, `500px`);
-        style1.addRule(`height`, `300px`);        
-        d.Styles.push(style1);
-        doc.Content = d;
-        
+        style1.addRule(`height`, `300px`);
+        style1.addRule(`border-style`, `solid`);
+        style1.addRule(`border-width`, `1px`);
+
+        let d = new Div();
+        d.Styles.push(style1);        
+        d.ID = `ab`;
+        doc.Content = d;        
 
         document.addEventListener("DOMContentLoaded", function (event) {
             doc.printTo(document);
         });
-        //var sb = document.getElementById(`Sandbox`);
-
-        //sb.appendChild(d.getObject(document));
     </script>
 </head>
-<body>
-    <div id="Sandbox"></div>
+<body>    
 </body>
 </html>
